fix empty pdf link and modify title

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Yu TIAN (Tyrace) - M.Phil. Student at HKU, specializing in AI Infrastructure, Machine Learning Systems, and Distributed Computing.">
-    <meta name="keywords" content="Yu TIAN, Tyrace, HKU, AI Infrastructure, ML Systems, Distributed Computing, LLM">
+    <meta name="keywords" content="Yu TIAN, Tyrace, HKU, AI Infrastructure, ML Systems, LLM, Distributed Computing">
     
     <meta property="og:title" content="Yu TIAN (Tyrace) - AI Infra / ML Systems">
-    <meta property="og:description" content="M.Phil. @ HKU | Researching AI Infrastructure & Distributed Systems">
+    <meta property="og:description" content="M.Phil. @ HKU | Researching AI Infrastructure & ML Systems">
     <meta property="og:image" content="images/profile.jpg">
     <meta property="og:url" content="https://king-ty.github.io/">
     <meta property="og:type" content="profile">
 
-    <title>Yu TIAN - AI Infra / ML Systems</title>
+    <title>Yu TIAN - M.Phil. @ HKU</title>
     <link rel="icon" href="images/site.jpg" type="image/jpeg">
 
     <script>
@@ -248,9 +248,14 @@
             <div class="content-list">
                 <div class="list-item clickable-block">
                     <a href="https://doi.org/10.1007/978-3-031-82349-7_6" target="_blank" class="block-link" aria-label="View Publication"></a>
-                    <div class="list-img pdf-container">
+                    <!-- <div class="list-img pdf-container">
                         <a href="papers/hedas.pdf" target="_blank" title="Download PDF" class="pdf-link">
                             <i class="fas fa-file-pdf"></i>
+                        </a>
+                    </div> -->
+                    <div class="list-img doi-container">
+                        <a href="https://doi.org/10.1007/978-3-031-82349-7_6" target="_blank" title="View at Springer" class="doi-link">
+                            <i class="fas fa-external-link-alt"></i>
                         </a>
                     </div>
                     
